[package]
name = "space_traders_dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.166"
serde_json = "1.0.99"
